src/components/PokemonMoves.scss
.menu-item {
    background-color: var(--popup-background-color);
    padding: 6px;
    border-radius: 12px;
    border: 1px solid var(--borderColor2);
    height: fit-content;
}

.recommended-moves-content {
    width: 100%;
}

.clickable {
    cursor: pointer;
}

.img-padding {
    display: flex;
    padding: 4px;
}

.recommended-title {
    margin-bottom: 9px;
}

.with-bottom-border {
    padding-bottom: 18px;
    border-bottom: 1px solid var(--borderColor2);
}

.recommended-charged-moves {
    margin-top: 9px;
    flex-direction: column;
    display: flex;
    gap: 9px;
}

.buffs-placeholder {
    display: flex;
    gap: 3px;
    flex-direction: row;
}

details {
    cursor: pointer;
}

details[open] {
    padding: 3px 9px;
}

.buff-panel {
    margin-top: 1px;
    padding: 0px 9px;
    border-radius: 12px;
    background-color: var(--buffBackground);
    border: 1px solid var(--borderColor2);
    max-width: -moz-fit-content;
    height: fit-content;
    max-width: fit-content;

    summary {
        font-size: small;
        font-weight: 500;
        display: flex;
        align-items: center;
        gap: 9px;
        height: 20px;
        line-height: 18px;
    }

    p {
        margin-top: 3px;
        padding-top: 3px;
        margin-bottom: 0;
    }
}

.buff-panel-buff {
    list-style: square;
    padding: 3px;
    margin: 0 18px;
}

.moves-display-layout {
    display: flex;
    flex-direction: column;
    margin-top: 8px;
    gap: 9px;
}

.recommended-moves {
    display: flex;
    justify-content: center;
}

.moves-title {
    margin-top: 0px;
    padding: 9px;
    border-radius: 12px;
    border: 1px solid var(--borderColor2);
    background-color: var(--buttonsBackground);
    
    &.hidden {
        margin-bottom: 0px;
    }

    h3 {
        margin: 0px;
    }
}

.chevron {
    height: fit-content;
    padding: 6px;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3px;
    border-radius: 12px;
    background-color: var(--background-shadow-soft);
    box-shadow: 0 0 2px hsla(0,21%,90%,.158),0 12px 11px #00000009;
}

.no-padding {
    padding: 0;
}

.moves-list {
    list-style: none;
    margin: 0;
    display: grid;
    grid-template-columns: 1fr;

    &.hidden {
        display: none;
    }
}

.slim-content {
    padding: 3px;
}

.normal-padding {
    padding: 0px 12px;
}

.extra-padding-right {
    padding-right: 18px !important;
}

.slim-padding {
    padding-left: 6px;
    padding-right: 12px;
    padding-top: 1.2px;
    padding-bottom: 1.2px;
}

.sparse-content {
    padding: 6px;
}

.sparse-list {
    grid-gap: 9px;
    gap: 9px;
}

.slim-list {
    grid-gap: 5px;
    gap: 5px;
}

.invert-dark-mode {
    filter: var(--filter)
}

.invert-light-mode {
    filter: var(--filter-inverse)
}

.move-card {
    border: 1px solid rgba(0,0,0,0.25);
    border-radius: 12px;
}

summary::-webkit-details-marker {
    display: none;
}

.move-card-content {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    text-align: left;
    gap: 3px 9px;
}

.move-main-info {
    margin-right: auto;
    display: flex;
}

.move-detail {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3px;
    &.with-shadow {
        border-radius: 12px;
        background-color: var(--background-shadow);
        box-shadow: 0 0 2px hsla(0,21%,90%,.158),0 12px 11px #00000009;
    }
    &.soft {
        background-color: var(--background-shadow-soft);
    }
    padding-right: 12px;
}

.all-moves {
    width: 100%
}

.move-stats {
    gap: 6px;
    padding: 9px;
}

.move-stats-slim {
    gap: 6px;
    padding: 6px;
}

.move-stats-content {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3px;
}

.fast-moves-section,
.charged-moves-section {
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
    &:not(.hidden) {
        margin-bottom: 9px;
    }
}

.background-dragon {
    background-color: var(--type-Dragon);
}

.background-grass {
    background-color: var(--type-Grass);
}

.background-bug {
    background-color: var(--type-Bug);
}

.background-steel {
    background-color: var(--type-Steel);
}

.background-water {
    background-color: var(--type-Water);
}

.background-fire {
    background-color: var(--type-Fire);
}

.background-normal {
    background-color: var(--type-Normal);
}

.background-ghost {
    background-color: var(--type-Ghost);
}

.background-psychic {
    background-color: var(--type-Psychic);
}

.background-poison {
    background-color: var(--type-Poison);
}

.background-flying {
    background-color: var(--type-Flying);
}

.background-electric {
    background-color: var(--type-Electric);
}

.background-fairy {
    background-color: var(--type-Fairy);
}

.background-dark {
    background-color: var(--type-Dark);
}

.background-fighting {
    background-color: var(--type-Fighting);
}

.background-rock {
    background-color: var(--type-Rock);
}

.background-ground {
    background-color: var(--type-Ground);
}

.background-ice {
    background-color: var(--type-Ice);
}

@media (min-width: 750px) {
    .moves-display-layout {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 9px;
        margin-top: 32px;
    }
    
    .recommended-moves-content {
        width: 70%;
    }
}

@media (max-width: 360px) {
    .move-card-content {
        font-size: 12px;
    }
}

